[package]
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"
name = "esp-01"
version = "0.1.1"
description = "Crate to communicate with the esp01 variant of the esp8266 module"
readme = "README.md"
keywords = ["embedded-hal", "esp8266", "esp01"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheZoq2/esp01-rs"

[dependencies]
embedded-hal = "0.2.3"
arrayvec = {version = "0.4.11", default-features = false}
nb = "0.1.2"
itoa = {version = "0.4.4", default-features = false}
